# grimbot-butler-os

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
brain/grimbot_brain/: __init__.py  adaptive_state.py  ambient_companion.py  capabilities.py  cli_demo.py  conversation.py  conversation_agent.py  conversation_retrieval.py  conversation_schemas.py  cycle.py  main.py  maya_core.py  memory.py  perception.py  persona.py  photo_capture.py  planner.py  response_composer.py  robot_memory.py  room_scan.py  room_scan_cli.py  safety.py  schemas.py  skills.py  vision.py  voice.py  voice_cli.py  web_search.py
brain/grimbot_brain/console/: console.css  console.js  index.html
brain/grimbot_brain/dreaming/: __init__.py  consolidator.py  dream_schemas.py  dreaming_engine.py  forgetter.py  promoter.py
brain/grimbot_brain/dreaming/providers/: __init__.py  mock.py  rule_based.py
brain/grimbot_brain/identity/: __init__.py  context_schemas.py  context_store.py  default_seed.py
brain/grimbot_brain/procedural_memory/: __init__.py  procedure_matcher.py  procedure_schemas.py  procedure_store.py
brain/grimbot_brain/workspace/: __init__.py  workspace_inspector.py  workspace_schemas.py
docs/: ambient_companion_mode_design.md  chief_of_staff_context_design.md  conversational_maya_design.md  maya_console_design.md  procedural_memory_design.md  web_search_design.md  workspace_awareness_design.md
tests/: conftest.py  test_adaptive_state.py  test_ambient_companion.py  test_command_formatting.py  test_console.py  test_conversation_agent.py  test_dreaming.py  test_identity_context.py  test_live_ambient_conversation.py  test_maya_core.py  test_memory.py  test_perception.py  test_photo_capture.py  test_planner.py  test_procedural_memory.py  test_robot_memory.py  test_room_scan.py  test_safety.py  test_schemas.py  test_skills.py  test_vision.py  test_voice.py  test_web_search.py  test_workspace.py
