[project]
name = "grimbot-brain"
version = "0.10.1"
description = "GrimBot Butler OS: Maya Chief of Staff context with a local operator console."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
gemini = [
    "google-generativeai>=0.8.0",
]
vision = [
    "opencv-python>=4.10.0",
]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
grimbot-demo = "grimbot_brain.cli_demo:main"
grimbot-room-scan = "grimbot_brain.room_scan_cli:main"
grimbot-voice-demo = "grimbot_brain.voice_cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["brain"]

[tool.setuptools]
package-dir = {"" = "brain"}

[tool.setuptools.packages.find]
where = ["brain"]

[tool.setuptools.package-data]
grimbot_brain = ["console/*"]
